Add and style footer

--- a/app/index.html
+++ b/app/index.html
@@ -350,6 +350,16 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <p class="footer__text">Copyright 2019 <span class="bold-text">hotel-widok-morze</span>.pl</p>
+            <ul class="footer__list">
+                <li class="footer__list-item">Hotel</li>
+                <li class="footer__list-item">Pokoje</li>
+                <li class="footer__list-item">Restauracje</li>
+                <li class="footer__list-item">Rezerwacje</li>
+                <li class="footer__list-item">Kontakt</li>
+            </ul>
+        </footer>
     </div>
     <script src="./js/index.min.js"></script>
 </body>
